Replace ScheduledExecutorService with ThreadPools (#47)
It's not considered good practice in OpenSearch to create ad-hoc thread
pools, since it's easy to mismanage them.

Instead, a plugin should register named ExecutorBuilders, which are
used to create properly managed executors. Then you can schedule tasks
against your particular executor.

Signed-off-by: Michael Froh <msfroh@apache.org>